# Text-to-Speech-Analysis

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
reports/: VoxCPM2_PoC_Infrastructure_Proposal.md  poc_rerun_results.md  tts_models_comparison.md
results/comparison/: chattts_timings.tsv  coqui_xtts_timings.tsv  f5tts_timings.tsv  parler_timings.tsv  piper_timings.tsv  styletts2_timings.tsv
results/eval/: prosody_results.json  speaker_similarity_results.json  wer_results.json
results/logs/: baseline_timings.tsv  cloned_timings.tsv  uncontrolled_timings.tsv
src/: common.py  generate_baseline.py  generate_cloned.py  text_data.py
src/comparison/: run_chattts.py  run_coqui_xtts.py  run_f5tts.py  run_kokoro.py  run_mms_tts.py  run_parler.py  run_piper.py  run_styletts2.py
src/eval/: generate_uncontrolled.py  manifest.py  measure_vram_chattts.py  measure_vram_coqui_xtts.py  measure_vram_f5tts.py  measure_vram_kokoro.py  measure_vram_mms_tts.py  measure_vram_parler.py  measure_vram_styletts2.py  measure_vram_voxcpm2.py  requirements-eval.txt  run_prosody_analysis.py  run_speaker_similarity.py  run_wer.py
tests/: conftest.py  test_common.py  test_eval_scoring.py  test_manifest.py  test_repo_layout.py  test_text_data.py
